// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/docker build multiplatform (2) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--push",
      "--platform=linux/amd64",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=renovate/docker-build-cache:base-latest,mode=max",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build multiplatform (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--platform=linux/amd64",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build multiplatform single platform) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--platform=linux/arm64",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build retries 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build throws 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--build-arg=IMAGE=slim",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build uses cache 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=renovate/docker-build-cache:base-latest,mode=max",
      ".",
    ],
  ],
]
`;

exports[`utils/docker build works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[`utils/docker publish skips signing 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
  Array [
    "docker",
    Array [
      "push",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[`utils/docker publish uptodate 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[`utils/docker publish works (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[`utils/docker publish works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
  Array [
    "docker",
    Array [
      "push",
      "renovate/base:latest",
    ],
  ],
  Array [
    "cosign",
    Array [
      "sign",
      "renovate/base:latest",
    ],
  ],
]
`;
